k8s/node-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-app
  namespace: devops-lab
  labels:
    app: node-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: node-app
